[package]
name = "mpd-notify-rs"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#notify = "5.1.0"
notify-rust = "4"
mpd = "0.1.0"
toml = "0.8.0"
serde = { version = "1.0.156" , features = ["derive"] }
dirs = "5.0.1"
walkdir = "2.4.0"
